--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Extinction Evasion</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href = "style.css"> -->
   <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400italic' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/phaser.js"></script>
 
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src = "js/main.js"> </script>
 </head>
 
@@ -36,7 +36,7 @@
   <p>Avoid the obstacles to keep each endangered animal safe!</p>
 </div>
 
-<p style="text-align:center;"><img src="http://i.imgur.com/9LqGJFF.png" alt="waves"></p>
+<p style="text-align:center;"><img src="https://i.imgur.com/9LqGJFF.png" alt="waves"></p>
 
 <div class="container">
   <div class="row">
