--- a/aboutus.html
+++ b/aboutus.html
@@ -6,12 +6,12 @@
   <title>About the Creators</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href = "style.css"> -->
   <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400italic' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="js/phaser.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- <script src = "js/actual_game.js"> </script> -->
 </head>
 
@@ -35,7 +35,7 @@
   <h1>About the Creators</h1>
 </div>
 
-<p style="text-align:center;"><img src="http://i.imgur.com/9LqGJFF.png" alt="waves"></p>
+<p style="text-align:center;"><img src="https://i.imgur.com/9LqGJFF.png" alt="waves"></p>
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
