--- a/helping.html
+++ b/helping.html
@@ -6,12 +6,12 @@
   <title>helping.html</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href = "style.css"> -->
   <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400italic' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="js/phaser.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- <script src = "js/actual_game.js"> </script> -->
 </head>
 
@@ -35,7 +35,7 @@
   <p>There are many different ways that anyone can help save endangered species.</p>
 </div>
 
-<p style="text-align:center;"><img src="http://i.imgur.com/9LqGJFF.png" alt="waves"></p>
+<p style="text-align:center;"><img src="https://i.imgur.com/9LqGJFF.png" alt="waves"></p>
 
 
   </div>
@@ -74,8 +74,8 @@
     <div class="col-sm-4">
     <center>
       <h3>World Wildlife Fund</h3>
-      <a href="http://www.worldwildlife.org/how-to-help">
-      <img border="0" alt="WWF Logo" src="http://i.imgur.com/4xfm25S.gif?1"></a>
+      <a href="https://www.worldwildlife.org/how-to-help">
+      <img border="0" alt="WWF Logo" src="https://i.imgur.com/4xfm25S.gif?1"></a>
       <p>An international non-governmental organization and the world's largest conservation organization, working in the field of wilderness preservation.</p>
       </center>
     </div>
@@ -83,8 +83,8 @@
     <div class="col-sm-4">
     <center>
       <h3>National Geographic</h3>
-      <a href="http://nationalgeographic.org/">
-      <img border="0" alt="NG Logo" src="http://i.imgur.com/3aPjxGe.jpg?1"></a>
+      <a href="https://nationalgeographic.org/">
+      <img border="0" alt="NG Logo" src="https://i.imgur.com/3aPjxGe.jpg?1"></a>
       <p>An intergovernmental organization which promotes activities, technologies, economies, and renewable energies which are regarded to be environment friendly.</p>
       </center>
     </div>
@@ -92,8 +92,8 @@
     <div class="col-sm-4">
     <center>
       <h3>National Wildlife Federation</h3>
-      <a href="http://www.nwf.org/">
-      <img border="0" alt="NWF Logo" src="http://i.imgur.com/XpMDwFW.png?1"></a>
+      <a href="https://www.nwf.org/">
+      <img border="0" alt="NWF Logo" src="https://i.imgur.com/XpMDwFW.png?1"></a>
       <p>United States' largest private advocacy organization, seeking common-sense solutions to environmental problems that work for wildlife and people. </p>
       </center>
     </div>
