--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,13 +4,13 @@
   <title>leaderboard.html</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href = "style.css"> -->
   <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400italic' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/phaser.js"></script>
 
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
   <h1>The Leaderboard</h1>
   <p>Who's really dedicated to helping save animals in danger of extinction?</p>
 
-<p style="text-align:center;"><img src="http://i.imgur.com/9LqGJFF.png" alt="waves"></p>
+<p style="text-align:center;"><img src="https://i.imgur.com/9LqGJFF.png" alt="waves"></p>
  <table class="table">
     <thead>
       <tr>
