--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>About the Creators</title>
+  <title>About the Creator</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -41,14 +41,6 @@
     <div class="col-sm-4">
     <h2><a href="http://www.linkedin.com/in/savvygupta">Savvy Gupta</h2></a>
     <p>Savvy is a young and frivolous spirit trying to find her way in the world. She has many passions, some of which include: programming, singing, and eating. She wants to spend the rest of her life helping people and changing the world for the better, but for right now you can always find her inside, sleep-deprived and far away from sunlight. </p>
-    </div>
-    <div class="col-sm-4">
-    <h2>Kim Li</h2>
-    <p>Kim enjoys dancing in her free time, and will often spend up to fifteen hours a week at her dance studio. She has a long list of books she would like to read as well, but is unable to find time to finish them. At school, she focuses on math and biology, as they are her favorite subjects, and would like to become an engineer or doctor one day. </p>
-    </div>
-    <div class="col-sm-4">
-    <h2>Vivienne Patwardhan</h2>
-    <p>Vivienne is a high school senior from San Jose. Her favorite subjects are physics and english, and outside of school she spends most of her time at robotics. She likes to sing and will read anything she can get her hands on. She is especially interested in programming applied to space exploration.</p>
     </div>
   </div>
 </div>
