--- a/aboutus.html
+++ b/aboutus.html
@@ -26,13 +26,13 @@
       <li><a href="index.html">The Game</a></li>
       <li><a href="leaderboard.html">The Leaderboard</a></li>
       <li><a href="helping.html">How Can I Help?</a></li>
-      <li class="active"><a href="aboutus.html">About the Creators</a></li>
+      <li class="active"><a href="aboutus.html">About the Creator</a></li>
     </ul>
   </div>
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>About the Creators</h1>
+  <h1>About the Creator</h1>
 </div>
 
 <p style="text-align:center;"><img src="https://i.imgur.com/9LqGJFF.png" alt="waves"></p>
