--- a/aboutus.html
+++ b/aboutus.html
@@ -39,8 +39,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
+      <div align="center">
     <h2><a href="http://www.linkedin.com/in/savvygupta">Savvy Gupta</h2></a>
     <p>Savvy is a young and frivolous spirit trying to find her way in the world. She has many passions, some of which include: programming, singing, and eating. She wants to spend the rest of her life helping people and changing the world for the better, but for right now you can always find her inside, sleep-deprived and far away from sunlight. </p>
-    </div>
+      </div>
+      </div>
   </div>
 </div>
