--- a/leaderboard.html
+++ b/leaderboard.html
@@ -23,7 +23,7 @@
       <li class="active"><a href="index.html">The Game</a></li>
       <li><a href="leaderboard.html">The Leaderboard</a></li>
       <li><a href="helping.html">How Can I Help?</a></li>
-      <li><a href="aboutus.html">About the Creators</a></li>
+      <li><a href="aboutus.html">About the Creator</a></li>
     </ul>
   </div>
 </nav>
