--- a/learnmore.html
+++ b/learnmore.html
@@ -26,7 +26,7 @@
       <li><a href="index.html">The Game</a></li>
       <li class="active"><a href="learnmore.html">Learn More!</a></li>
       <li><a href="helping.html">How Can I Help?</a></li>
-      <li><a href="aboutus.html">About the Creators</a></li>
+      <li><a href="aboutus.html">About the Creator</a></li>
     </ul>
   </div>
 </nav>
