--- a/leaderboard.html
+++ b/leaderboard.html
@@ -36,14 +36,61 @@
  <table class="table">
     <thead>
       <tr>
-        <th>Username</th>
-        <th>Score</th>
+        <th scope="col">Rank</th>
+        <th scope="col">Username</th>
+        <th scope="col">Score</th>
       </tr>
     </thead>
     <tbody>
-      <tr id="genericrow" class="scorerow"  style="display:none">
-        <td class="username">John</td>
-        <td class="score">Doe</td>
+      <tr style="display:none">
+        <th scope="row">1</th>
+        <td>Doctor Who</td>
+        <td>200</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">2</th>
+        <td>sav</td>
+        <td>198</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">3</th>
+        <td>turtle</td>
+        <td>192</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">4</th>
+        <td>Doctor Who</td>
+        <td>190</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">5</th>
+        <td>Doctor Who</td>
+        <td>189</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">6</th>
+        <td>viv</td>
+        <td>188</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">7</th>
+        <td>Dr Who</td>
+        <td>186</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">8</th>
+        <td>Kim</td>
+        <td>186</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">9</th>
+        <td>Alex</td>
+        <td>184</td>
+      </tr>
+      <tr style="display:none">
+        <th scope="row">10</th>
+        <td>Anonymous</td>
+        <td>180</td>
       </tr>
     </tbody>
   </table>
@@ -51,9 +98,9 @@
 
 
 
-  <div id="leaderboard"></div>
+<!--   <div id="leaderboard"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="js/leaderboard.js"></script>
+  <script src="js/leaderboard.js"></script> -->
 
 </body>
 
