--- a/leaderboard.html
+++ b/leaderboard.html
@@ -33,7 +33,7 @@
   <p>Who's really dedicated to helping save animals in danger of extinction?</p>
 
 <p style="text-align:center;"><img src="https://i.imgur.com/9LqGJFF.png" alt="waves"></p>
- <table class="table">
+ <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">Rank</th>
@@ -42,52 +42,52 @@
       </tr>
     </thead>
     <tbody>
-      <tr style="display:none">
+      <tr>
         <th scope="row">1</th>
         <td>Doctor Who</td>
         <td>200</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">2</th>
         <td>sav</td>
         <td>198</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">3</th>
         <td>turtle</td>
         <td>192</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">4</th>
         <td>Doctor Who</td>
         <td>190</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">5</th>
         <td>Doctor Who</td>
         <td>189</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">6</th>
         <td>viv</td>
         <td>188</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">7</th>
         <td>Dr Who</td>
         <td>186</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">8</th>
         <td>Kim</td>
         <td>186</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">9</th>
         <td>Alex</td>
         <td>184</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <th scope="row">10</th>
         <td>Anonymous</td>
         <td>180</td>
