--- a/leaderboard.html
+++ b/leaderboard.html
@@ -36,9 +36,9 @@
  <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col">Rank</th>
-        <th scope="col">Username</th>
-        <th scope="col">Score</th>
+        <th scope="col" style="text-align:center">Rank</th>
+        <th scope="col" style="text-align:center">Username</th>
+        <th scope="col" style="text-align:center">Score</th>
       </tr>
     </thead>
     <tbody>
