--- a/leaderboard.html
+++ b/leaderboard.html
@@ -33,7 +33,7 @@
   <p>Who's really dedicated to helping save animals in danger of extinction?</p>
 
 <p style="text-align:center;"><img src="https://i.imgur.com/9LqGJFF.png" alt="waves"></p>
- <table class="table table-hover">
+ <table class="table table-hover table-dark">
     <thead>
       <tr>
         <th scope="col" style="text-align:center">Rank</th>
