--- a/leaderboard.html
+++ b/leaderboard.html
@@ -43,52 +43,52 @@
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
+        <th scope="row" style="text-align:center">1</th>
         <td>Doctor Who</td>
         <td>200</td>
       </tr>
       <tr>
-        <th scope="row">2</th>
+        <th scope="row" style="text-align:center">2</th>
         <td>sav</td>
         <td>198</td>
       </tr>
       <tr>
-        <th scope="row">3</th>
+        <th scope="row" style="text-align:center">3</th>
         <td>turtle</td>
         <td>192</td>
       </tr>
       <tr>
-        <th scope="row">4</th>
+        <th scope="row" style="text-align:center">4</th>
         <td>Doctor Who</td>
         <td>190</td>
       </tr>
       <tr>
-        <th scope="row">5</th>
+        <th scope="row" style="text-align:center">5</th>
         <td>Doctor Who</td>
         <td>189</td>
       </tr>
       <tr>
-        <th scope="row">6</th>
+        <th scope="row" style="text-align:center">6</th>
         <td>viv</td>
         <td>188</td>
       </tr>
       <tr>
-        <th scope="row">7</th>
+        <th scope="row" style="text-align:center">7</th>
         <td>Dr Who</td>
         <td>186</td>
       </tr>
       <tr>
-        <th scope="row">8</th>
+        <th scope="row" style="text-align:center">8</th>
         <td>Kim</td>
         <td>186</td>
       </tr>
       <tr>
-        <th scope="row">9</th>
+        <th scope="row" style="text-align:center">9</th>
         <td>Alex</td>
         <td>184</td>
       </tr>
       <tr>
-        <th scope="row">10</th>
+        <th scope="row" style="text-align:center">10</th>
         <td>Anonymous</td>
         <td>180</td>
       </tr>
