--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,8 +20,8 @@
       <a class="navbar-brand" href="index.html">Extinction Evasion</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">The Game</a></li>
-      <li><a href="leaderboard.html">The Leaderboard</a></li>
+      <li><a href="index.html">The Game</a></li>
+      <li class="active"><a href="leaderboard.html">The Leaderboard</a></li>
       <li><a href="helping.html">How Can I Help?</a></li>
       <li><a href="aboutus.html">About the Creator</a></li>
     </ul>
