--- a/aboutus.html
+++ b/aboutus.html
@@ -43,7 +43,7 @@
     <div class="col-sm-14">
       <div align="center">
     <h2><a href="http://www.linkedin.com/in/savvygupta">Savvy Gupta</h2></a>
-    <p>Savvy is a young and frivolous spirit trying to find her way in the world. She has many passions, some of which include: programming, singing, and eating. She wants to spend the rest of her life helping people and changing the world for the better, but for right now you can always find her inside, sleep-deprived and far away from sunlight. </p>
+    <p>Savvy is a young and frivolous spirit trying to find her way in the world. She has many passions, some of which include: programming, dancing, eating, and teaching. She wants to spend the rest of her life helping people and sharing her knowledge with her community, but for right now you can always find her at her local Pho shop, either preparing lesson plans or developing choreography. If you have questions, email her at: gupta.savvy@gmail.com </p>
       </div>
       </div>
   </div>
